petclinic_chart/templates/petdep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
spec:
  selector:
    matchLabels:
      app: petclinic
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
        - name: petclinic
          image: rofucloud/hepapitask2
          ports:
            - containerPort: 8080


---
apiVersion: v1
kind: Service
metadata:
  name: petclinic
spec:
  type: NodePort
  selector:
    app: petclinic
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30002
