petclinic_chart/templates/petdepsvc.yml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
spec:
  type: NodePort
  selector:
    app: petclinic
  ports:
    - name: http
      port: 80
      targetPort: 8080
